docs: updating documentation