@@ -12,6 +12,7 @@ import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import io.github.resilience4j.retry.annotation.Retry;
 import io.micrometer.observation.annotation.Observed;
 import io.micrometer.tracing.annotation.NewSpan;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,7 +31,13 @@ import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestClient;
 
 /**
- * This class contains methods to integrate SILVA REST API with ForestClient API.
+ * Provider that integrates with the external ForestClient API.
+ *
+ * <p>
+ * Contains methods to fetch clients, locations and perform searches against
+ * the downstream ForestClient service. Resilience (retry/circuit breaker)
+ * and response handling are applied where appropriate.
+ * </p>
  */
 @Slf4j
 @Component
@@ -48,8 +55,15 @@ public class ForestClientApiProvider {
   /**
    * Fetch a ForestClient by its number.
    *
+   * <p>
+   * Handles downstream response status codes mapping them to appropriate
+   * domain exceptions (404 -> {@link ForestClientNotFoundException}, 429 ->
+   * {@link TooManyRequestsException}, 4xx -> {@link UnretriableException},
+   * 5xx -> {@link RetriableException}).
+   * </p>
+   *
    * @param number the client number to search for
-   * @return the ForestClient with client number, if one exists
+   * @return an {@link Optional} containing the {@link ForestClientDto} if found
    */
   @Retry(name = "apiRetry", fallbackMethod = "fetchClientByNumberFallBack")
   @NewSpan
@@ -96,10 +110,15 @@ public class ForestClientApiProvider {
   /**
    * Search client by name, acronym or number.
    *
-   * @param page  Pagination parameter
-   * @param size  Pagination parameter
-   * @param value the value to search for
-   * @return List of ForestClientDto
+   * <p>
+   * Returns a pageable result of {@link ForestClientDto}. The total count is
+   * read from the {@code X-Total-Count} response header.
+   * </p>
+   *
+   * @param page pagination page
+   * @param size pagination size
+   * @param value search value for name/acronym/number
+   * @return a {@link Page} of {@link ForestClientDto}
    */
   @CircuitBreaker(name = "breaker", fallbackMethod = "paginatedFallback")
   @NewSpan
@@ -154,8 +173,13 @@ public class ForestClientApiProvider {
   /**
    * Fetch all locations for a client.
    *
-   * @param clientNumber the client number to search for
-   * @return the list of ForestClientLocationDto for the client
+   * <p>
+   * Returns a pageable list of {@link ForestClientLocationDto}. On 404 the
+   * call throws {@link ForestClientNotFoundException}.
+   * </p>
+   *
+   * @param clientNumber client number to lookup
+   * @return a pageable list of locations for the client
    */
   @CircuitBreaker(name = "breaker", fallbackMethod = "paginatedFallback")
   @NewSpan
@@ -201,7 +225,10 @@ public class ForestClientApiProvider {
   }
 
 
-  @CircuitBreaker(name = "breaker", fallbackMethod = "locationByClientNumberAndLocationCodeFallback")
+  @CircuitBreaker(
+      name = "breaker",
+      fallbackMethod = "locationByClientNumberAndLocationCodeFallback"
+  )
   @NewSpan
   public Optional<ForestClientLocationDto> fetchLocationByClientNumberAndLocationCode(
       String clientNumber,
@@ -268,19 +295,22 @@ public class ForestClientApiProvider {
     return List.of();
   }
 
+  @SuppressWarnings("unused")
   private Optional<ForestClientDto> fetchClientByNumberFallBack(String number, Throwable ex) {
-    log.warn("Fallback for fetchClientByNumber for {} due to {}.", PROVIDER, ex.toString());
+    logFallbackWarn("fetchClientByNumber", ex);
     return Optional.empty();
   }
 
+  @SuppressWarnings("unused")
   private <T> Page<T> paginatedFallback(
       int page,
       int size,
       String value,
       Throwable ex
   ) {
-    log.warn("Fallback for searchClients for {} due to {}.", PROVIDER, ex.toString());
-    return new PageImpl<>(List.of(), PageRequest.of(page, size), 0);
+    logFallbackWarn("searchClients", ex);
+    List<T> empty = Collections.emptyList();
+    return new PageImpl<>(empty, PageRequest.of(page, size), 0);
   }
 
   private <T> Page<T> paginatedFallback(
@@ -290,14 +320,17 @@ public class ForestClientApiProvider {
     return paginatedFallback(0, 10, value, ex);
   }
 
+  @SuppressWarnings("unused")
   private Optional<ForestClientLocationDto> locationByClientNumberAndLocationCodeFallback(
       String clientNumber,
       String locationCode,
       Throwable ex
   ) {
+    logFallbackWarn("locationByClientNumberAndLocationCode", ex);
     return Optional.empty();
   }
 
+  @SuppressWarnings("unused")
   private List<ForestClientDto> searchClientsByIdsFallback(
       int page,
       int size,
@@ -305,7 +338,13 @@ public class ForestClientApiProvider {
       String name,
       Throwable ex
   ){
-    return List.of();
+    logFallbackWarn("searchClientsByIds", ex);
+    return ForestClientConstants.EMPTY_FOREST_CLIENT_LIST;
+  }
+
+  // Centralized fallback logger to reduce repeated code
+  private void logFallbackWarn(String method, Throwable ex) {
+    log.warn("Fallback for {} for {} due to {}.", method, PROVIDER, ex == null ? "unknown" : ex.toString());
   }
 
 }
